Fix grid overflow

--- a/source/stylesheets/_components.container.sass
+++ b/source/stylesheets/_components.container.sass
@@ -4,6 +4,7 @@
   max-width: 920px
   padding-left: 8px
   padding-right: 8px
+  overflow-x: hidden
   +respond-to(small-up)
     width: 90%
     padding-left: 0
